Assigning claims to the user on the fly

--- a/Source/WebApiAuth/WebApiAuth.Server/WebApiAuth.Server.csproj
+++ b/Source/WebApiAuth/WebApiAuth.Server/WebApiAuth.Server.csproj
@@ -171,6 +171,8 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountsController.cs" />
     <Compile Include="Controllers\BaseApiController.cs" />
+    <Compile Include="Controllers\ClaimsController.cs" />
+    <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Controllers\RolesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -179,6 +181,8 @@
     <Compile Include="Infrastructure\ApplicationRoleManager.cs" />
     <Compile Include="Infrastructure\ApplicationUser.cs" />
     <Compile Include="Infrastructure\ApplicationUserManager.cs" />
+    <Compile Include="Infrastructure\ExtendedClaimsProvider.cs" />
+    <Compile Include="Infrastructure\RolesFromClaims.cs" />
     <Compile Include="Migrations\201511242205161_InitialCreate.cs" />
     <Compile Include="Migrations\201511242205161_InitialCreate.Designer.cs">
       <DependentUpon>201511242205161_InitialCreate.cs</DependentUpon>
